[package]
name = "darkwallet"
version = "0.0.5"
authors = ["Amir Taaki <amir@dyne.org>"]
license = "GPL-3.0-or-later"
description = "Make anonymous payments with any cryptocurrency"
edition = "2018"
repository = "https://github.com/narodnik/darkwallet"
exclude = [
    "extern/*"
]

[dependencies]
itertools = "0.8.2"
rand_core = "0.5.1"
rand = "0.7.2"
sha2 = "0.8.1"
bls12_381 = { version = "0.1.1" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hex = "0.4.2"

[dev-dependencies]
clap = "2.33.0"
dirs = "2.0.2"
log = "0.4"
simplelog = "0.7.4"

